# snekwest

./: .gitignore  .gitmodules  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
python/snekwest/: __init__.py  _bindings.pyi  api.py  exceptions.py  models.py  sessions.py
src/: exceptions.rs  lib.rs  request_params.rs  response.rs  session.rs
